# bogen-guard

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.node.json
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: Overlay.css  Overlay.tsx
src/hooks/: useSpeechRecognition.ts  useWhisperRecognition.ts
src/utils/: profanityDetector.ts
