[package]
name = "bogen-guard"
version = "0.1.0"
description = "Bogen Guard - 暴言検知オーバーレイアプリ"
authors = ["rippy"]
edition = "2021"

[lib]
name = "bogen_guard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "bogen-guard"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
cpal = "0.15"
ureq = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
